# job-server

./: .browserslistrc  .dockerignore  .earlybird_falsepositives.yaml  .earlybird_ignore_codes  .earlybird_ignore_labels  .eslintrc.cjs  .flake8  .ge_ignore  .ge_ignore.extra  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .swcrc  .test.env  CHECKS  DEVELOPERS.md  DOKKU_SCALE  Dockerfile  INSTALL.md  LICENSE  Makefile  Procfile  README.md  TESTING.md  app.json  babel.config.js  biome.json  biome.jsonc  check.sh  dashboard-example.json  docker-compose.yml  dotenv-sample  entrypoint.sh  environment-sample  environment-sample-docker  eslint.config.mjs  example.txt  gunicorn.conf.py  jest.config.js  justfile  (+27 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: 0040_ndoo_request.md
.github/workflows/: auto-merge.yml  deploy.yml  main.yml  update-dependencies.yml  update-interactive-templates.yml  update-python-dependencies.yml  uvmirror-check.yml  verification-tests.yml
airlock/: apps.py  config.py  emails.py  issues.py  slack.py  urls.py  views.py
applications/: emails.py  form_spec_helpers.py  form_specs.py  forms.py  models.py  researchers.py  urls.py  utils.py  views.py  wizard.py
applications/migrations/: 0001_add_application_and_researcher_registration.py  0001_initial.py  0001_squashed_2025_03.py  0002_add_application_approved_at_and_by.py  0002_add_commercial_involvement_page.py  0002_add_short_data_report.py  0002_application_has_reached_confirmation.py  0002_auto_20210917_0841.py  0003_add_application_status.py  0003_add_read_analytic_methods_policy.py  0003_auto_20210917_1245.py  0003_set_character_limit_on_study_purpose.py  0003_update_researcher_fields.py  0004_add_sponsor_details_page_is_member_of_bennett_or_lshtm.py  0004_add_topic_areas.py  0004_auto_20210917_1247.py  0004_make_boolean_radio_fields_nullable.py  0005_add_datasets_needed.py  0005_auto_20210917_1303.py  0005_move_max_length_from_study_purpose_to_study_lay_description.py  0005_split_up_application_model.py  0006_add_researcher_daa_and_github_username.py  0006_auto_20210917_1323.py  0006_remove_max_length_from_lay_description.py  0006_sponsordetailspage_institutional_rec_reference.py  0007_add_notes_and_is_approved_to_pages.py  0007_alter_application_status_comment.py  0007_auto_20210917_1324.py  0007_datasetspage_needs_ukrr.py  0008_add_application_deleted_at_and_deleted_by.py  0008_add_review_and_datetime_fields_to_pages.py  0008_application_all_applicants_completed_getting_started.py  0009_remove_application_has_reached_confirmation.py  (+5 more)
assets/: dist
auditing/: emitters.py  events.py  models.py
docker/: .env  Dockerfile  build-dependencies.txt  dependencies.txt  docker-compose.yaml  justfile  postgres.conf
interactive/: __init__.py  commands.py  dates.py  emails.py  forms.py  issues.py  models.py  notifications.py  opencodelists.py  slacks.py  submit.py  urls.py  views.py
jobserver/: actions.py  admin.py  admins.py  api.py  api_views.py  asgi.py  auth_pipeline.py  backends.py  commands.py  context_processors.py  copiloting.py  emails.py  fields.py  first.py  forms.py  github.py  hash_utils.py  honeycomb.py  html_utils.py  issues.py  middleware.py  model_utils.py  models.py  nav.py  patch_slippers.py  pipeline.py  pipeline_config.py  project.py  project_validators.py  rap_api.py  releases.py  reports.py  roles.py  runtime.py  serializers.py  settings.py  signing.py  slacks.py  snippets.py  urls.py  (+3 more)
outputs/: data-001.csv  data-002.csv  data-003.csv  interactive_report.html  interactive_testing_report.html  text-001.txt  webpage-001.html
redirects/: middleware.py  models.py
scripts/: build_earlybird_pii_config.py  collect-me-maybe.sh  dev-env.sh  dump-co-pilot-reporting-data.sh  get_excluded_columns.py  gitignore_to_earlybird_ignore.py  local-release-hatch.sh  pre-commit-earlybird.sh  test-coverage.sh  upgrade-pipeline.sh
services/: backends.py  logging.py  sentry.py  slack.py  tracing.py
snippets/: 1-rubric.md  1.md  10-fieldset0-field0-help_text.md  10-fieldset1-field0-help_text.md  11-rubric.md  13-rubric.md  14-fieldset0-field0-help_text.md  14-fieldset0-field1-help_text.md  14-fieldset0-field1-label.md  14-rubric.md  15-rubric.md  16-rubric.md  2-fieldset0-field1-help_text.md  2-rubric.md  3-rubric.md  6-rubric.md  7-footer.md  7-rubric.md  8-footer.md  9-fieldset0-is_on_cmo_priority_list-label.md  application.md  commercial-involvement-rubric.md  datasets-rubric.md  description-help_text.md  emis_justification.md  is_on_cmo_priority_list_help_text.md  patient-level.md  previous_experience_with_ehr_help_text.md  read_analytic_methods_policy-help_text.md  references-footer.md  references-rubric.md  researcher-details.md  researcher-server-access-footer.md  researcher-server-access-rubric.md  service-evaluation-audit-footer.md  service-evaluation-audit-rubric.md  short-data-report-rubric.md  sign_in.md  start_page.md  study_purpose-help_text.md  (+1 more)
staff/: forms.py  htmx_tools.py  querystring_tools.py  urls.py
static/: manifest.webmanifest  robots.txt
templates/: _job_request_pagination.html  _job_requests.html  _release_list-tw.html  base-tw.html  base.html  components.yaml  error.html  generate-login-token.html  index-authenticated.html  index-unauthenticated.html  index.html  job_detail.html  job_request_create.html  job_request_detail.html  job_request_list.html  job_request_pick_ref.html  login.html  org_detail.html  org_event_log.html  org_list.html  outputs-spa.html  project_detail.html  project_edit.html  project_event_log.html  project_release_list.html  project_repo_list.html  project_report_list.html  release_detail.html  reset_password.html  set_password.html  settings.html  sign_off_repo.html  snapshot_detail.html  status.html  user_detail.html  user_event_log.html  user_list.html  workspace_analysis_request_list.html  workspace_backend_files.html  workspace_create.html  (+9 more)
tests/: conftest.py  factories.py  fakes.py  paired_fields_utils.py  test_network.py  test_repository.py  test_requirements.py  utils.py
(+1617 files in other folders)
