[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jobserver"
description = "jobserver"
readme = "README.md"
authors = [{name = "OpenSAFELY", email = "tech@opensafely.org"}]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "argon2-cffi",
    "dj-database-url",
    "django>=5.2,<6.0",
    "django-anymail[mailgun]",
    "django-csp",
    "django-extensions",
    "django-htmx",
    "django-permissions-policy",
    "django-structlog",
    "django-vite",
    "djangorestframework",
    "furl",
    "gunicorn",
    "markdown",
    "nh3",
    "opensafely-pipeline@https://github.com/opensafely-core/pipeline/archive/refs/tags/v2025.03.06.161237.zip",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-django",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-sdk",
    "psycopg[binary]",
    "pygments",
    "python-ulid",
    "requests",
    "sentry-sdk",
    "slack-sdk",
    "slippers",
    "social-auth-app-django",
    "social-auth-core",
    "stamina",
    "structlog",
    "whitenoise[brotli]>=6.8.0",
    "xkcdpass",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)

[tool.coverage.run]
branch = true
relative_files = true
dynamic_context = "test_function"
omit = [
  "*/migrations/*",
  "applications/management/commands/fix_truncated_data.py",
  "jobserver/asgi.py",
  "jobserver/jobs/*",
  "jobserver/management/commands/count_rows.py",
  "jobserver/management/commands/ensure_backends.py",
  "jobserver/management/commands/get_all_projects.py",
  "jobserver/management/commands/get_transitional_projects.py",
  "jobserver/management/commands/inflate_release_files.py",
  "jobserver/management/commands/list_missing_repos.py",
  "jobserver/management/commands/publish_files.py",
  "jobserver/management/commands/release.py",
  "jobserver/settings.py",
  "jobserver/wsgi.py",
]
parallel = true
source = [
  "airlock",
  "applications",
  "jobserver",
  "redirects",
  "services",
  "staff",
  "tests",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
addopts = "--disable-socket --tb=native --maxprocesses=6 --strict-markers"
DJANGO_SETTINGS_MODULE = "jobserver.settings"
env = [
  "JOBSERVER_GITHUB_TOKEN=empty",
  "PASSWORD_HASHERS=django.contrib.auth.hashers.MD5PasswordHasher",
  "SECRET_KEY=12345",
  "SOCIAL_AUTH_GITHUB_KEY=test",
  "SOCIAL_AUTH_GITHUB_SECRET=test",
  "DEFAULT_OUTPUT_CHECKING_REPO=test-repo",
  "DEFAULT_OUTPUT_CHECKING_SLACK_CHANNEL=test-channel",
]
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning:",
    "ignore:Call to deprecated method __init__:DeprecationWarning:",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning:",
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning:",
    "ignore:The FORMS_URLFIELD_ASSUME_HTTPS transitional setting is deprecated.:django.utils.deprecation.RemovedInDjango60Warning:",

    # this is actually in protobuf, via the opentelemetry stack vendored into
    # opensafely, but is likely also coming from the opentelemetry stack also
    # installed with this project
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated.*:DeprecationWarning:opensafely",
]
markers = [
  "slow_test: mark test as being slow running",
  "verification: tests that verify fakes",
  "functional: tests that use Playwright in functional tests",
]

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "assets",
  "coverage",
  "docker",
  "docs",
  "htmlcov",
  "node_modules",
  "outputs",
  "releases",
  "snippets",
  "static",
  "staticfiles",
  "uploads",
  "venv",
]

[tool.ruff.lint]
isort.lines-after-imports = 2
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "A005", # ignore stdlib-module-shadowing. Would need to re-name services.logging.
  "E501", # ignore line-length. We judge case-by-case.
]

[tool.ruff.lint.per-file-ignores]
"gunicorn.conf.py" = ["INP001"]
"manage.py" = ["INP001"]
"sitecustomize.py" = ["INP001"]

# Note: any `exclude-newer-package` timestamps should be removed if > 7 days old.
# See https://github.com/opensafely-core/repo-template/blob/main/DEVELOPERS.md for details.
[tool.uv]
required-version = ">=0.9"
exclude-newer = "2025-12-11T00:00:00Z"
exclude-newer-package = {}

[dependency-groups]
dev = [
    "coverage-enable-subprocess",
    "coverage[toml]",
    "django-debug-toolbar",
    "django-upgrade",
    "djhtml",
    "factory-boy",
    "pre-commit",
    "pytest-django",
    "pytest-env",
    "pytest-freezer",
    "pytest-icdiff",
    "pytest-mock",
    "pytest-socket",
    "pytest-xdist[psutil]",
    "responses",
    "ruff",
]
